2014-08-24  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: Rename DOM.RGBA and remove workarounds in the bindings generator
        https://bugs.webkit.org/show_bug.cgi?id=136025

        Reviewed by Joseph Pecoraro.

        Also rename DOM.RGBA in legacy protocol specifications.

        * Versions/Inspector-iOS-6.0.json:
        * Versions/Inspector-iOS-7.0.json:

2014-08-21  Simon Fraser  <simon.fraser@apple.com>

        Add a button to enable paint flashing in the web inspector
        https://bugs.webkit.org/show_bug.cgi?id=136133

        Reviewed by Tim Hatcher.
        
        Add a button to the right of the layer borders button to turn on paint flashing.
        Future patches will actually enable this feature.

        * Localizations/en.lproj/localizedStrings.js: Tooltip strings.
        * UserInterface/Images/PaintFlashing.svg: Added. "Paintbrush" icon.
        * UserInterface/Views/DOMTreeContentView.js:
        (WebInspector.DOMTreeContentView):
        (WebInspector.DOMTreeContentView.prototype.get navigationItems):
        (WebInspector.DOMTreeContentView.prototype._togglePaintFlashing):

2014-08-20  Saam Barati  <sbarati@apple.com>

        Rename HighFidelityTypeProfiling variables for more clarity
        https://bugs.webkit.org/show_bug.cgi?id=135899

        Reviewed by Geoffrey Garen.

        Change a reference in a comment to a JavaScriptCore file to its 
        newly renamed variant.

        * UserInterface/Models/ScriptSyntaxTree.js:

2014-08-18  Saam Barati  <sbarati@apple.com>

        Web Inspector: Introduce an inspector Abstract Syntax Tree.
        https://bugs.webkit.org/show_bug.cgi?id=135763

        Reviewed by Joseph Pecoraro.

        This patch adds an Abstract Syntax Tree to the Web inspector. 
        This syntax tree is modeled off the Esprima.js syntax tree
        which complies with the Mozilla Parser API:
        https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/Parser_API